--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.12.1",
+    "@popperjs/core": "^2.11.6",
+    "@types/react": "^17.0.0 || ^18.0.0",
+    "bootstrap": "^5.2.3",
+    "react": "18.1.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "18.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
